<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:gravity="center_vertical" >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/item_date"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginLeft="40dp"
            android:gravity="center_vertical"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/item_carnum"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:gravity="center_vertical"
            android:textColor="@color/red"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginRight="40dp"
            android:gravity="center_vertical"
            android:text="@string/howmany"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:layout_width="3dp"
        android:layout_height="20dp"
        android:background="@color/background" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_weight="1" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginLeft="40dp"
            android:gravity="center_vertical"
            android:text="@string/oil_mass"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_oil_gross"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:gravity="center_vertical"
            android:textColor="@color/green"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginRight="40dp"
            android:gravity="center_vertical"
            android:text="@string/ssheng"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:layout_width="3dp"
        android:layout_height="20dp"
        android:background="@color/background" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_weight="1" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginLeft="40dp"
            android:gravity="center_vertical"
            android:text="@string/oil_money"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_total_price"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:gravity="center_vertical"
            android:textColor="@color/orange"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginRight="40dp"
            android:gravity="center_vertical"
            android:text="@string/yuan"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_consume_day_info"
        android:layout_width="50dp"
        android:layout_height="70dp"
        android:layout_gravity="right"
        android:background="@drawable/right"
        android:gravity="right" />

</LinearLayout>