<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/deep_back" >

        <TextView
            android:id="@+id/tv_back_record"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_horizontal"
            android:text="@string/back"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:layout_width="3dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:background="@color/white" />

        <TextView
            android:id="@+id/record_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="50dp"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/car_num"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="200dp"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/cars"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/car_gross"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="50dp"
            android:text="@string/oil_mass"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/gas_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="30dp"
            android:text="@string/money_oil"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <GridView
        android:id="@+id/record_grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:horizontalSpacing="10dp"
        android:numColumns="5"
        android:stretchMode="columnWidth"
        android:verticalSpacing="10dp" >
    </GridView>

</LinearLayout>